@@ -1,6 +1,7 @@
 LIST OF CHANGES
 ---------------
 
+ - make number of slots used by seq_alignment configurable
  - use npg_tracking::util::abs_path to patch absolute paths (so allow running on file 
    server)
  - drop not_strip_bam_tag option, explicitly disable bam tag stripping in seq_alignment
